refactor(user/login): add login user
