# app/Dto/User/LoginDto.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Dto\User;
+
+final class LoginDto
+{
+    public function __construct(private string $email, private string $password) {}
+
+    public function getEmail(): string
+    {
+        return $this->email;
+    }
+
+    public function setEmail(string $email): void
+    {
+        $this->email = $email;
+    }
+
+    public function getPassword(): string
+    {
+        return $this->password;
+    }
+
+    public function setPassword(string $password): void
+    {
+        $this->password = $password;
+    }
+}
